<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/length"/>

    <EditText
        android:id="@+id/edit_length"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:layout_marginBottom="@dimen/padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/width"/>

    <EditText
        android:id="@+id/edit_width"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:layout_marginBottom="@dimen/padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/height"/>

    <EditText
        android:id="@+id/edit_height"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:layout_marginBottom="@dimen/padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="Autofill,LabelFor" />

    <Button
        android:id="@+id/btn_save"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_result"
        android:layout_marginBottom="@dimen/padding"
        android:gravity="center"
        android:text="@string/result"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>