<resources>
    <string name="app_name">My Unit Testing</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="save">Save</string>
    <string name="calculate_volume">Calculate Volume</string>
    <string name="calculate_circumference">Calculate Circumference</string>
    <string name="calculate_surface">Calculate Surface Area</string>
    <string name="result">Result</string>
</resources>
